syntax = "proto3";

package core.iam;
option go_package = "github.com/CyberAgent/mimosa-core/proto/iam";

/**
 * Entity
 */

// User
message User {
  uint32 user_id = 1;
  string name = 2;
  bool activated = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}
